hw01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-hw01-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-hw01-app
  template:
    metadata:
      labels:
        app: otus-hw01-app
    spec:
      containers:
        - name: otus-hw01
          image: khaydarov95/otus-hw01:v1
          ports:
            - name: web
              containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              port: 80
              path: /health
            initialDelaySeconds: 2
            periodSeconds: 2
