hw01/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-hw01-service
spec:
  selector:
    app: otus-hw01-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: NodePort
